--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
 
 html {
     font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
+
+}
+
+img {
+    display: inline-block;
 }
 
 .container {
@@ -50,13 +56,25 @@ html {
     width: 400px;
     display: flex;
     justify-content: space-around;
+    position: relative;
 }
 
-#input_product {
+.input_product {
     width: 250px;
     height: 36px;
-    line-height: 44px;
+    padding: 0 20px 0 40px;
     border-radius: 5px;
+    outline: none;
+    border: solid gray 2px;
+    font-size: 16px;
+}
+
+.icon-search{
+    opacity: 0.7;
+    position: absolute;
+    left: 15px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .bgr_product {
@@ -129,5 +147,99 @@ html {
 }
 
 .search {
-    padding: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.sort_by {
+    width: 160px;
+    margin-left: 20px;
+    padding: 14px 40px;
+    background-color: #f3f4f6;
+    border-radius: 8px;
+}
+
+.sort_by span {
+    margin-right: 5px;
+}
+
+.list_products{
+    display: flex;
+    justify-content: space-between;
+}
+
+.item_product{
+    display: inline-block;
+    position: relative;
+    margin: 40px 0;
+}
+
+.item_product h1{
+    display: inline-block;
+}
+
+.item_product h3:last-child{
+    opacity: 0.5;
+    margin-left: 5px;
+    display: inline-block;
+}
+
+.item_product img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.tag{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 8px 10px;
+    background-color: #ffc970;
+    border-radius: 20px;
+    opacity: 0.8;
+    font-size: 12px;
+}
+
+.body_item p{
+    margin: 5px 0;
+}
+
+.title {
+    margin: 10px 0;
+}
+.cart{
+    scale: 0.15;
+    object-fit: fill;
+    position: absolute;
+    bottom: -114px;
+    right: -114px;
+}
+
+
+.phanTrang{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.phanTrang span{
+    margin-inline: 20px;
+}
+
+.phanTrang span:hover{
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.phanTrang img:hover{
+    scale: 2;
+    cursor: pointer;
+}
+
+
+.footer{
+    width: 100%;
+    height: 500px;
+    background-color: #000;
 }
