--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
-
 }
 
 img {
@@ -69,7 +68,7 @@ img {
     font-size: 16px;
 }
 
-.icon-search{
+.icon-search {
     opacity: 0.7;
     position: absolute;
     left: 15px;
@@ -119,7 +118,7 @@ img {
 .menu_product a {
     text-decoration: none;
     padding: 16px 44px;
-    color: #01875F;
+    color: #01875f;
     font-weight: 600;
     font-size: 16px;
     border-radius: 5px;
@@ -128,19 +127,18 @@ img {
 
 .menu_product a:first-child {
     color: #fff;
-    background-color: #01875F;
+    background-color: #01875f;
 }
 
 .menu_product a:nth-child(2) {
-    
     position: relative;
 }
 
-.menu_product a:nth-child(2)::after{
-    content: '';
+.menu_product a:nth-child(2)::after {
+    content: "";
     width: 1px;
     height: 40px;
-    background-color: #01875F;
+    background-color: #01875f;
     position: absolute;
     top: 10px;
     right: 0;
@@ -163,33 +161,33 @@ img {
     margin-right: 5px;
 }
 
-.list_products{
+.list_products {
     display: flex;
     justify-content: space-between;
 }
 
-.item_product{
+.item_product {
     display: inline-block;
     position: relative;
-    margin: 40px 0;
+    margin: 20px 0;
 }
 
-.item_product h1{
+.item_product h1 {
     display: inline-block;
 }
 
-.item_product h3:last-child{
+.item_product h3:last-child {
     opacity: 0.5;
     margin-left: 5px;
     display: inline-block;
 }
 
-.item_product img{
+.item_product img {
     width: 100%;
     object-fit: cover;
 }
 
-.tag{
+.tag {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -200,14 +198,14 @@ img {
     font-size: 12px;
 }
 
-.body_item p{
+.body_item p {
     margin: 5px 0;
 }
 
 .title {
     margin: 10px 0;
 }
-.cart{
+.cart {
     scale: 0.15;
     object-fit: fill;
     position: absolute;
@@ -215,31 +213,133 @@ img {
     right: -114px;
 }
 
-
-.phanTrang{
+.phanTrang {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 20px 0;
 }
 
-.phanTrang span{
+.phanTrang span {
     margin-inline: 20px;
 }
 
-.phanTrang span:hover{
+.phanTrang span:hover {
     font-size: 30px;
     cursor: pointer;
 }
 
-.phanTrang img:hover{
+.phanTrang img:hover {
     scale: 2;
     cursor: pointer;
 }
 
-
-.footer{
+.footer {
     width: 100%;
-    height: 500px;
+    background-color: #000;
+    padding: 80px 120px;
+    display: flex;
+    color: #bdc0c6;
+}
+
+.overview {
+    width: 40%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-item {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-item p {
+    margin-top: 24px;
+}
+
+select {
+    margin-top: 26px;
+    padding: 8px 20px 8px 4px;
+    border-radius: 5px;
+    outline: 2px solid #fff;
+    color: #fff;
     background-color: #000;
 }
+
+.connect {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 20%;
+}
+
+.email-connect {
+    position: relative;
+}
+
+input[type="email"] {
+    width: 350px;
+    padding: 15px 18px 15px 60px;
+    border-radius: 10px 0 0 10px;
+    font-size: 16px;
+    outline: none;
+    border: 2px solid #bdc0c6;
+    background-color: #000;
+    color: #bdc0c6;
+}
+
+.icon-email {
+    position: absolute;
+    left: 18px;
+    color: #000;
+    font-size: 26px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #bdc0c6;
+}
+
+.btnSub {
+    display: inline-block;
+    margin-left: -120px;
+    padding: 17px 28px;
+    background-color: #01875f;
+    border-radius: 0 10px 10px 0;
+    border: none;
+    text-align: center;
+    color: white;
+    font-weight: 600;
+}
+
+.btnSub:hover{
+    background-color: #bdc0c6;
+    color: #01875f;
+    border: none;
+    border-radius: none;
+}
+
+.connect p{
+    margin: 24px 0;
+}
+
+.social {
+    width: 150px;
+    padding: 48px 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.img1:hover,
+.img2:hover,
+.img3:hover,
+.img4:hover{
+    opacity: 0.6;
+}
+
+.bottom-text{
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+}
+
+.bottom-text:nth-child(1) {
+    list-style-type: none;
+} 
